# traffic-conflict-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
conflict_detection/: __init__.py
conflict_detection/detect/: __init__.py  detection_system.py
conflict_detection/detector/: conflict_detector.py
conflict_detection/homography/: __init__.py  click_points.py  world_projector.py
conflict_detection/objects/: __init__.py  object_detector.py  object_tracker.py
conflict_detection/safety/: __init__.py  post_encroachment_time.py  safety_manager.py  time_to_collision.py
conflict_detection/studio/: __init__.py  control.py  custodian.py  illustrate.py  read.py  render.py  source.py  studio_manager.py  write.py
conflict_detection/target_dev/: __init__.py  target_detector.py  target_tracker.py
conflict_detection/trajectory/: __init__.py  traj_analyzer.py  traj_collector.py  traj_manager.py
conflict_detection/utils/: __init__.py  helpers.py  logger.py
scripts/: main.py
