[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lane_detection"
version = "0.1.0"
description = "Classic lane line detection system using traditional CV models and Kalman filtering"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shane Teel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT Licence",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.10.0",
    "setuptools==80.9.0",
    "pydantic==2.12.5"
]

[project.urls]
Homepage = "https://github.com/ShaneTeel/lane-detection-classic"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]