[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conflict_detection"
version = "0.1.0"
description = "Computer Vision system coupled with GIS analysis for identifying, cataloguing, and evaluating traffic conflict events."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shane Teel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT Licence",
    "Operating System :: OS Independent"
]
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "streamlit>=1.28.0",
    "folium>=0.15.0",
    "plotly>=5.17.0",
    "supervision==0.27.0",
]

[project.urls]
Homepage = "https://github.com/ShaneTeel/traffic-conflict-detection"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]